# MSPACompiler

./: .gitignore  .gitmodules  Compiler.py  MANIFEST.in  gamzee.lua  karkat.lua  macros.mspa  main.py  out.py  parse.py  poetry.toml  przyklad.py  pyproject.toml  quirk.py  quirkbase.lua  quirks.json  requirements.txt  setup.py  strong.lua  style.css  tags.mspa  tekst.py  test.py
MSPACompiler/: __init__.py  __main__.py  textCompiler.py
MSPACompiler/examples/: basics.mspa  example.mspa
MSPACompiler/lua/: __init__.py
MSPACompiler/parser/: __init__.py  parseRules.py  treeVisitor.py
MSPACompiler/scripts/: mspa.py  mspac.py
MSPACompiler/tags/: __init__.py  baseTag.py  compiler.py  defines.py
TextCompiler/: __init__.py  textCompiler.py  textParser.py
TextCompiler/inputStringParser/: parseRules.py  treeVisitor.py
TextCompiler/lua/: __init__.py
TextCompiler/parser/: treeVisitor.py
TextCompiler/tags/: __init__.py  baseTag.py  block.py  codeTag.py  (+8 more)
edytor/: Quirk.py  QuirkSyntax.py
quirkSetter/: __init__.py  modules.py  quirkbase.lua
quirks/: aradia.json  dave.json  default.json  dirk.json  equius.json  eridan.json  feferi.json  gamzee.json  hal.json  jade.json  jake.json  jane.json  john.json  kanaya.json  karkat.json  lilhal.json  nepeta.json  rose.json  roxy.json  scratch.json  sollux.json  tavros.json  terezi.json  vriska.json
tags/: __init__.py  baseTag.py  block.py  codeTag.py  defcode.py  define.py  defines.py  ifTags.py  macro.py  textBlocks.py  utils.py
tests/: conftest.py  tags.mspa  test_code.py  test_compile.py  test_parse.py
textParser/: treeVisitor.py
(+33 files in other folders)
