[tool.poetry]
name = "TextCompiler"
version = "0.1.0"
description = ""
authors = ["Vlaska <vlaska8888@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Arpeggio = "^1.10.1"
lupa = "^1.9"
python-i18n = "^0.3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
autopep8 = "^1.5.4"
black = "^20.8b1"
jedi = "===0.17.2"
ipython = "^7.19.0"
pylama = "^7.7.1"
flake8 = "^3.8.4"
setuptools = "^51.1.2"
pydot = "^1.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
