[tool.poetry]
name = "MSPACompiler"
version = "1.3.1"
description = ""
authors = ["Vlaska <vlaska8888@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Arpeggio = "^1.10.1"
lupa = "^1.9"
loguru = "^0.5.3"
appdirs = "^1.4.4"
fcache = "^0.4.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
autopep8 = "^1.5.4"
black = "^20.8b1"
jedi = "<0.18.0"
ipython = "^8.10.0"
pylama = "^7.7.1"
flake8 = "^3.8.4"
setuptools = "^51.1.2"
pydot = "^1.4.1"
taskipy = "^1.6.0"
pytest-cov = "^2.11.0"
vulture = "^2.3"
rope = "^0.18.0"
loguru-caplog = "^0.2.0"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test = "pytest tests"
ctest = "pytest --cov=MSPACompiler tests --cov-report html --cov-report term-missing"
format = "autopep8 -i -r MSPACompiler"
dead = "vulture MSPACompiler --ignore-names visit_*,compile_css,getMatchGroup"

[tool.autopep8]
max_line_length = 79
ignore = "E721"